Change overview image

--- a/_posts/2024-11-08-welcome.md
+++ b/_posts/2024-11-08-welcome.md
@@ -12,11 +12,11 @@ This is the first blog post for Tridentu-R ever. However, this isn't about us.
 This is about the future.
 
 
-# The future of Tridentu-R
+# The future of Tridentu
 
-On January 29th, 2022, It was decided that Tridentu-RT would be paused.
+In July of 2022, It was decided that Tridentu-RK would be paused.
 
-Tridentu-RT was the AwesomeWM version of Tridentu-R. Tridentu-R is the
+Tridentu-RK was the KDE version of Tridentu-R. Tridentu-R is the
 
 **refined** and **newer** version of the original Tridentu (made for BIOS devices).
 
@@ -25,9 +25,9 @@ To start this blog post off, let's establish the present.
 
 ## The present
 
-Tridentu-RK is the current variant of Tridentu-R.
+Tridentu 2K is the current variant of Tridentu 2.
 
-Pentonium (codename) provides the following:
+Kryptonite (codename) provides the following:
 
 - A copy of the linux kernel that includes some useful submodules.
 
