Change overview image

--- a/_posts/2024-11-08-welcome.md
+++ b/_posts/2024-11-08-welcome.md
@@ -16,7 +16,7 @@ This is about the future.
 
 In July of 2022, It was decided that Tridentu-RK would be paused.
 
-Tridentu-RK was the KDE version of Tridentu-R. Tridentu-R is the
+Tridentu-RK was the KDE version of Tridentu-R. Tridentu-R was (at the time) the
 
 **refined** and **newer** version of the original Tridentu (made for BIOS devices).
 
@@ -27,9 +27,14 @@ To start this blog post off, let's establish the present.
 
 Tridentu 2K is the current variant of Tridentu 2.
 
-Kryptonite (codename) provides the following:
+Tridentu 2 is the 2nd attempt at Tridentu Linux - with lessons from the first and refind versions of the distro.
 
-- A copy of the linux kernel that includes some useful submodules.
+Tridentu 2 Kryptonite will provide the following:
 
+- An updated kernel
+- A package manager for optional packages
+- Flatpak support out of the box
+- Web browser out of the box (Firefox or Konqueror)
+- MTP Support
 
-
+and much more.
