Padding for blog (Fix) + Typo in first article

--- a/_posts/2024-11-08-welcome.md
+++ b/_posts/2024-11-08-welcome.md
@@ -4,7 +4,7 @@ title: Welcome!
 author: Tridentu Group
 ---
 
-This is the first blog post for Tridentu-R ever. However, this isn't about us.
+This is the first blog post for Tridentu 2 ever. However, this isn't about us.
 
 This is about the future.
 
@@ -24,7 +24,7 @@ To start this blog post off, let's establish the present.
 
 Tridentu 2K is the current variant of Tridentu 2.
 
-Tridentu 2 is the 2nd attempt at Tridentu Linux - with lessons from the first and refind versions of the distro.
+Tridentu 2 is the 2nd attempt at Tridentu Linux - with lessons from the first and refined versions of the distro.
 
 Tridentu 2 Kryptonite will provide the following:
 
