--- a/_posts/2024-11-25-weekly-recap-112524.md
+++ b/_posts/2024-11-25-weekly-recap-112524.md
@@ -4,7 +4,7 @@ title: Weekly Recap (11/25/2024)
 author: Aerodos12
 ---
 
-One week has passed since the last post. Let's go over what happened
+One week has passed since the last post. Let's go over what happened:
 
 ## Test 2 Successful
 
@@ -45,6 +45,6 @@ only repository out there.
 
 ## Better Installation
 
-This week wil mark the start of work on the tridentuinstall program. Also, the Calamares option will have a
+This week wil mark the start of work onthe tridentuinstall program. Also, the Calamares option will have a
 
 better slideshow.
