--- a/_posts/2024-11-08-welcome.md
+++ b/_posts/2024-11-08-welcome.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Welcome!
-author: Tridentu Group
+author: Aerodos12
 ---
 
 This is the first blog post for Tridentu 2 ever. However, this isn't about us.
